# Rogue

./: .gitignore  CMakeLists.txt  README.md  S24_Riyuan_Liu.sln  unique.txt
Assets/Textures/: Losing_screen.kra
Assets/Textures/Bullet/: Bullet2.png~  Bullet9Up.png-autosave.kra  Bullet9Up.png~
Assets/Textures/Enemy/: Enemy_10.kra  Enemy_10.kra-autosave.kra  Enemy_10.png~
Assets/Textures/Health/: Health.png~
Assets/Textures/Item/: Gun_3.png~  Gun_4.png~  Gun_5.png~  Gun_6.png~  Gun_7.png~  Gun_8.png~  Gun_9.png~
Game/: Game.vcxproj
Rogue/: CMakeLists.txt  Rogue.vcxproj  Rogue.vcxproj.filters  Utility.h
Rogue/Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Rogue/Assets/Textures/: DeepseaCreatures_spritesheet.png-autosave.kra
Rogue/include/: Rogue.h
Rogue/src/: .h  Image.cpp  Image.h  ImageImplement.h  Renderer.cpp  Renderer.h  RendererImplement.h  Rogue.h  RogueApplication.cpp  RogueApplication.h  RogueEvents.cpp  RogueEvents.h  RogueKeys.h  RogueWindow.cpp  RogueWindow.h  Shader.cpp  Shader.h  ShaderImplement.h  Unit.cpp  Unit.h  Utility.h  WindowImpl.h  pch.cpp  pch.h
Rogue/src/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Rogue/src/codeOpenGL/: ImageOpenGL.cpp  ImageOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h
S24_Riyuan_Liu/: Bullets.cpp  Bullets.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Item.cpp  Item.h  Player.cpp  Player.h  S24_Riyuan_Liu.vcxproj  S24_Riyuan_Liu.vcxproj.filters  Score.cpp  Score.h  Source.cpp  main.cpp
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: RendererImplement.h  glad.c
stbi/: CMakeLists.txt  Resource.h  stbi.cpp  stbi.rc  stbi.vcxproj  stbi.vcxproj.filters
